Fixed desktop lightbox overflow

--- a/style.css
+++ b/style.css
@@ -199,6 +199,10 @@ h6 {
   width: 100%;
 }
 
+.min-w150px {
+  min-width: 150px;
+}
+
 .logo {
   height: 40px;
   margin: 0 -12px;
@@ -520,7 +524,7 @@ form textarea {
   }
 
   .grid-item-picture {
-    max-height: 400px;
+    max-height: 600px;
     overflow: hidden;
     grid-area: image;
   }
@@ -555,6 +559,7 @@ form textarea {
   width: 100vw;
   z-index: 100;
   background-color: #1929b3c4;
+  overflow: auto;
 }
 
 .blur {
